--- a/Frontends/assets/variables.scss
+++ b/Frontends/assets/variables.scss
@@ -8,7 +8,8 @@ $gray-1: #333;
 $gray-2: #4d4d4d;
 $gray-3: #707070;
 $gray-4: #d9d9d9;
-$gray-5: #f8f9fa;
+$gray-5: #f5f5f5;
+$gray-6: #f8f9fa;
 $white: #fff;
 $link: #006ca8;
 $emergency: #FFE200;
