--- a/Frontends/assets/variables.scss
+++ b/Frontends/assets/variables.scss
@@ -14,6 +14,8 @@ $white: #fff;
 $link: #006ca8;
 $emergency: #FFE200;
 
+$pink-1: #e65a7f;
+
 // ==================
 // shadow
 $shadow: 0 0 2px rgba(0, 0, 0, 0.15);
